--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -50,7 +50,7 @@ jobs:
           docker buildx build . --provenance=false --platform linux/arm64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64" --push
 
   matrix-prep-version:
-    runs-on: unbuntu-latest
+    runs-on: ubuntu-latest
     needs:
       - build
     steps:
