--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -49,7 +49,7 @@ jobs:
           echo "docker buildx build . --provenance=false --platform linux/arm64 --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64 --push"
           docker buildx build . --provenance=false --platform linux/arm64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64" --push
 
-  matrix-prep-version:
+  matrix-prep-versions:
     runs-on: ubuntu-latest
     needs:
       - build
@@ -65,15 +65,15 @@ jobs:
       - id: version_label
         run: echo "version=${{ steps.meta.outputs.version }}" >> $GITHUB_OUTPUT
     outputs:
-          versions: $${{toJSON(steps.*.outputs.version)}}
+          versions: ${{toJSON(steps.*.outputs.version)}}
 
   create_manifest:
     runs-on: ubuntu-latest
     needs:
-      - matrix-prep-version
+      - matrix-prep-versions
     strategy:
         matrix:
-            version: ${{ fromJSON(needs.matrix-prep-version.outputs.versions) }}
+            version: ${{ fromJSON(needs.matrix-prep-versions.outputs.versions) }}
     steps:
       -
         name: Login to Docker Hub
