--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -93,10 +93,16 @@ jobs:
           DOCKER_PRIVATE_KEY: "${{ secrets.DOCKER_PRIVATE_KEY }}"
           DOCKER_CONTENT_TRUST_REPOSITORY_PASSPHRASE: "${{ secrets.DOCKER_PRIVATE_KEY_PASSPHRASE }}"
       -
+        name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.REGISTRY_IMAGE }}
+      -
         name: create manifest and push it
         # create and sign "$version" manifest
         run: | 
-          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:${{ matrix.version }} --amend ${{env.REGISTRY_IMAGE}}:${{matrix.version}}-amd64 --amend ${{env.REGISTRY_IMAGE}}:${{matrix.version}}-arm64
+          DOCKER_CLI_EXPERIMENTAL=enabled docker manifest create ${{ env.REGISTRY_IMAGE }}:${{ matrix.version }} --amend ${{env.REGISTRY_IMAGE}}:${{ steps.meta.outputs.version }}-amd64 --amend ${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64
           docker manifest push ${{ env.REGISTRY_IMAGE }}:${{ matrix.version }}
           docker pull ${{ env.REGISTRY_IMAGE }}:${{ matrix.version }} 
           docker trust sign ${{ env.REGISTRY_IMAGE }}:${{ matrix.version }}
@@ -108,7 +114,6 @@ jobs:
         name: Verify signatures
         run: |
           docker trust inspect --pretty ${{ env.REGISTRY_IMAGE }}:${{ matrix.version }}
-          docker trust inspect --pretty ${{ env.REGISTRY_IMAGE }}:latest
       -
         name: check that secure download works
         run: |
