--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -63,7 +63,7 @@ jobs:
       - id: latest_label
         run: echo "version=latest" >> $GITHUB_OUTPUT
       - id: version_label
-        run: echo "output1 is ${GITHUB_OUTPUT} or ${{GITHUB_OUTPUT}}"; echo "version=${{ steps.meta.outputs.version }}" >> $GITHUB_OUTPUT; echo "output2 is $GITHUB_OUTPUT or ${{GITHUB_OUTPUT}}"
+        run: echo "output1 is ${GITHUB_OUTPUT} or ${{GITHUB_OUTPUT}}"; echo "version=${{ steps.meta.outputs.version }}" >> $GITHUB_OUTPUT; echo "output2 is ${GITHUB_OUTPUT} or ${{GITHUB_OUTPUT}}"
     outputs:
           versions: ${{toJSON(steps.*.outputs.version)}}
 
