--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -63,7 +63,7 @@ jobs:
       - id: latest_label
         run: echo "version=latest" >> $GITHUB_OUTPUT
       - id: version_label
-        run: cat ${GITHUB_OUTPUT}; echo "output1 is ${GITHUB_OUTPUT}"; echo "version=${{ steps.meta.outputs.version }}" >> $GITHUB_OUTPUT; echo "output2 is ${GITHUB_OUTPUT}; cat ${GITHUB_OUTPUT}"
+        run: echo "we have ${{toJSON(steps.*.outputs.version)}}"; echo "version=${{ steps.meta.outputs.version }}" >> $GITHUB_OUTPUT; after we have ${{toJSON(steps.*.outputs.version)}}"
     outputs:
           versions: ${{toJSON(steps.*.outputs.version)}}
 
