--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -63,7 +63,7 @@ jobs:
       - id: latest_label
         run: echo "version=latest" >> $GITHUB_OUTPUT
       - id: version_label
-        run: echo "we have ${{toJSON(steps.*.outputs.version)}}"; echo "version=${{ steps.meta.outputs.version }}" >> $GITHUB_OUTPUT; after we have ${{toJSON(steps.*.outputs.version)}}"
+        run: echo "we have ${{toJSON(steps.*.outputs.version)}}"; echo "version=${{ steps.meta.outputs.version }}" >> $GITHUB_OUTPUT; echo "after we have ${{toJSON(steps.*.outputs.version)}}"
     outputs:
           versions: ${{toJSON(steps.*.outputs.version)}}
 
