--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -10,10 +10,12 @@ env:
   REGISTRY_IMAGE: jpsevigny/jptest
 
 jobs:
-  build:
+  build_archs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
+      matrix: 
+        arch: [arm64, amd64]
     steps:
       -
         name: Checkout
@@ -37,43 +39,40 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Build and push amd64
-        id: buildamd64
+        name: Build and push linux/${{matrix.arch}}
         run: |
-          echo "docker buildx build . --provenance=false --platform linux/amd64 --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-amd64 --push"
-          docker buildx build . --provenance=false --platform linux/amd64 --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-amd64 --push
-      - 
-        name: Build and push arm64
-        id: buildarm64
-        run: |
-          echo "docker buildx build . --provenance=false --platform linux/arm64 --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64 --push"
-          docker buildx build . --provenance=false --platform linux/arm64 --tag "${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-arm64" --push
+          docker buildx build . --provenance=false --platform linux/${{matrix.arch}} --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-${{matrix.arch}} --push
 
-  matrix-prep-versions:
+  generate-version-matrix:
     runs-on: ubuntu-latest
     needs:
-      - build
+      - build_archs
+    outputs:
+      versions: ${{ steps.meta.outputs.tags }}    
     steps:
-      -
-        name: Docker meta
+      - 
+        name: extract docker meta
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.REGISTRY_IMAGE }}
-      - id: latest_label
-        run: echo "version=latest" >> $GITHUB_OUTPUT
-      - id: version_label
-        run: echo "we have ${{toJSON(steps.*.outputs.version)}}"; echo "version=${{ steps.meta.outputs.version }}" >> $GITHUB_OUTPUT; echo "after we have ${{toJSON(steps.*.outputs.version)}}"
-    outputs:
-          versions: ${{toJSON(steps.*.outputs.version)}}
-
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=sha,format=long
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}.{{minor}}.{{patch}}
+          
   create_manifest:
     runs-on: ubuntu-latest
-    needs:
-      - matrix-prep-versions
+    needs: 
+        - generate-version-matrix
     strategy:
         matrix:
-            version: ${{ fromJSON(needs.matrix-prep-versions.outputs.versions) }}
+            version: ${{fromJSON(needs.generate-version-matrix.outputs.versions)}}
     steps:
       -
         name: Login to Docker Hub
@@ -84,7 +83,7 @@ jobs:
       -
         name: create files for signing
         run: | 
-          echo "we have ${{ toJSON(needs.matrix-prep-versions.outputs.versions) }} "
+          echo "we have ${{ toJSON(needs.generate-version-matrix.outputs.versions) }} "
           mkdir -p ~/.docker/trust/private
           echo "${DOCKER_PRIVATE_KEY}" > ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key
           chmod 0600 ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key
