--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -48,7 +48,7 @@ jobs:
     needs:
       - build_archs
     outputs:
-      versions: ${{ steps.meta.outputs.tags }}    
+      versions: ${{ steps.sanitize_output.outputs.tags }}    
     steps:
       - 
         name: extract docker meta
@@ -65,6 +65,10 @@ jobs:
             type=semver,pattern={{major}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}.{{minor}}.{{patch}}
+      - 
+        name: sanitize output
+        id: sanitize_output
+        run: echo "we have {{steps.meta.outputs.tags}}"; echo "${{steps.meta.outputs.tags}}" >> "$GITHUB_OUTPUT"
           
   create_manifest:
     runs-on: ubuntu-latest
