--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -68,7 +68,7 @@ jobs:
       - 
         name: sanitize output
         id: sanitize_output
-        run: echo "we have {{steps.meta.outputs.tags}}"; echo "${{steps.meta.outputs.tags}}" >> "$GITHUB_OUTPUT"
+        run: echo "we have ${{steps.meta.outputs.tags}}"; echo "${{steps.meta.outputs.tags}}" >> "$GITHUB_OUTPUT"
           
   create_manifest:
     runs-on: ubuntu-latest
