--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -69,9 +69,9 @@ jobs:
         name: sanitize output
         id: sanitize_output
         run: |
-          echo "we have ${{steps.meta.outputs.tags}}"
-          echo "${{steps.meta.outputs.tags}}" >> "$GITHUB_OUTPUT"
-          # run echo "::set-output name=matrix::{\"node\": ${{steps.meta.outputs.tags}}}"
+          echo "we have ${{ steps.meta.outputs.tags }}"
+          echo "${{ steps.meta.outputs.tags }}" >> $GITHUB_OUTPUT
+          # run echo "::set-output name=matrix::{\"node\": ${{ steps.meta.outputs.tags }}}"
           
   create_manifest:
     runs-on: ubuntu-latest
@@ -79,7 +79,7 @@ jobs:
         - generate-version-matrix
     strategy:
         matrix:
-            version: ${{fromJSON(needs.generate-version-matrix.outputs.versions)}}
+            version: ${{ needs.generate-version-matrix.outputs.versions }}
     steps:
       -
         name: Login to Docker Hub
@@ -90,7 +90,7 @@ jobs:
       -
         name: create files for signing
         run: | 
-          echo "we have ${{ toJSON(needs.generate-version-matrix.outputs.versions) }} "
+          echo "we have ${{ needs.generate-version-matrix.outputs.versions }} "
           mkdir -p ~/.docker/trust/private
           echo "${DOCKER_PRIVATE_KEY}" > ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key
           chmod 0600 ~/.docker/trust/private/${DOCKER_PRIVATE_KEY_ID}.key
