--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -50,6 +50,12 @@ jobs:
     outputs:
       versions: ${{ steps.sanitize_output.outputs }}    
     steps:
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - 
         name: extract docker meta
         id: meta
