--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -50,27 +50,27 @@ jobs:
     outputs:
       versions: ${{ steps.sanitize_output.outputs }}    
     steps:
-      -
-        name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - 
-        name: extract docker meta
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.REGISTRY_IMAGE }}
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=sha,format=long
-            type=raw,value=latest,enable={{is_default_branch}}
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}.{{minor}}.{{patch}}
+ #     -
+ #       name: Login to Docker Hub
+ #       uses: docker/login-action@v2
+ #       with:
+ #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+ #         password: ${{ secrets.DOCKERHUB_TOKEN }}
+ #     - 
+ #       name: extract docker meta
+ #       id: meta
+ #       uses: docker/metadata-action@v4
+ #       with:
+ #         images: ${{ env.REGISTRY }}/${{ env.REGISTRY_IMAGE }}
+ #         tags: |
+ #           type=ref,event=branch
+ #           type=ref,event=pr
+ #           type=sha,format=long
+ #           type=raw,value=latest,enable={{is_default_branch}}
+ #           type=semver,pattern={{version}}
+ #           type=semver,pattern={{major}}
+ #           type=semver,pattern={{major}}.{{minor}}
+ #           type=semver,pattern={{major}}.{{minor}}.{{patch}}
       - 
         name: sanitize output
         id: sanitize_output
