--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -48,7 +48,7 @@ jobs:
     needs:
       - build_archs
     outputs:
-      versions: ${{ steps.sanitize_output.outputs }}    
+      myoutput: ${{ steps.sanitize_output.outputs.myoutput }}    
     steps:
  #     -
  #       name: Login to Docker Hub
@@ -75,10 +75,10 @@ jobs:
         name: sanitize output
         id: sanitize_output
         run: |
-          echo "we have ${{ steps.meta.outputs.tags }}"
+          # echo "we have ${{ steps.meta.outputs.tags }}"
           # echo "${{ steps.meta.outputs.tags }}" >> $GITHUB_OUTPUT
-          echo "{ \"version:\": \"1.1\"}" >> $GITHUB_OUTPUT
-          # run echo "::set-output name=matrix::{\"node\": ${{ steps.meta.outputs.tags }}}"
+          # echo "{ \"version:\": \"1.1\"}" >> $GITHUB_OUTPUT
+          echo "myoutput=blah" >> $GITHUB_OUTPUT 
           
   create_manifest:
     runs-on: ubuntu-latest
@@ -86,7 +86,7 @@ jobs:
         - generate-version-matrix
     strategy:
         matrix:
-            version: ${{ needs.generate-version-matrix.outputs.versions }}
+            version: ${{ needs.generate-version-matrix.outputs.myoutput }}
     steps:
       -
         name: Login to Docker Hub
