--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -50,6 +50,9 @@ jobs:
     outputs:
       versions: ${{ steps.sanitize_output.outputs.versions }}    
     steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v3
       - 
         name: Docker meta
         id: meta
