--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -53,6 +53,12 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v3
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - 
         name: Docker meta
         id: meta
