--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -15,7 +15,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix: 
-        arch: [arm64, amd64]
+#        arch: [arm64, amd64]
+        arch: [amd64]
     steps:
       -
         name: Checkout
