--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -60,33 +60,33 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - 
-        name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.REGISTRY_IMAGE }}
 #      - 
-#        name: extract docker meta
+#        name: Docker meta
 #        id: meta
 #        uses: docker/metadata-action@v4
 #        with:
-#          images: ${{ env.REGISTRY }}/${{ env.REGISTRY_IMAGE }}
-#          tags: |
-#            type=ref,event=branch
-#            type=ref,event=pr
-#            type=sha,format=long
-#            type=raw,value=latest,enable={{is_default_branch}}
-#            type=semver,pattern={{version}}
-#            type=semver,pattern={{major}}
-#            type=semver,pattern={{major}}.{{minor}}
-#            type=semver,pattern={{major}}.{{minor}}.{{patch}}
-#      - 
+#          images: ${{ env.REGISTRY_IMAGE }}
+      - 
+        name: extract docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.REGISTRY_IMAGE }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=sha,format=long
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}.{{minor}}.{{patch}}
       - 
         name: sanitize output
         id: sanitize_output
         run: |
-          echo "we have ${{steps.meta.outputs.version}}"
+          echo "we have ${{steps.meta.outputs.tags}}"
+
           echo "versions=[\"latest\", \"1.1\", \"1.2\"]" >> $GITHUB_OUTPUT
           
   create_manifest:
