--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -44,12 +44,12 @@ jobs:
         run: |
           docker buildx build . --provenance=false --platform linux/${{matrix.arch}} --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-${{matrix.arch}} --push
 
-  generate-version-matrix:
+  get-tags:
     runs-on: ubuntu-latest
     needs:
       - build_archs
     outputs:
-      versions: ${{ steps.sanitize_output.outputs.versions }}    
+      versions: ${{ steps.produce_output.outputs }}    
     steps:
       -
         name: Checkout
@@ -82,20 +82,18 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}.{{minor}}.{{patch}}
       - 
-        name: sanitize output
-        id: sanitize_output
+        name: produce output
+        id: produce_output
         run: |
-          echo "we have ${{steps.meta.outputs.tags}}"
-
-          echo "versions=[\"latest\", \"1.1\", \"1.2\"]" >> $GITHUB_OUTPUT
+          echo "${{fromJSON(steps.meta.outputs.tags)}}" >> $GITHUB_OUTPUT
           
   create_manifest:
     runs-on: ubuntu-latest
     needs: 
-        - generate-version-matrix
+        - get-tags
     strategy:
         matrix:
-            version: ${{ fromJSON(needs.generate-version-matrix.outputs.versions) }}
+            version: ${{ fromJSON(needs.get_tags.meta.outputs.tags) }}
     steps:
       -
         name: Login to Docker Hub
