--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -44,12 +44,12 @@ jobs:
         run: |
           docker buildx build . --provenance=false --platform linux/${{matrix.arch}} --tag ${{env.REGISTRY}}/${{env.REGISTRY_IMAGE}}:${{steps.meta.outputs.version}}-${{matrix.arch}} --push
 
-  get-tags:
+  get_versions:
     runs-on: ubuntu-latest
     needs:
       - build_archs
     outputs:
-      versions: ${{ steps.produce_output.outputs }}    
+      versions: ${{ steps.produce_output.outputs.versions }}    
     steps:
       -
         name: Checkout
@@ -60,12 +60,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-#      - 
-#        name: Docker meta
-#        id: meta
-#        uses: docker/metadata-action@v4
-#        with:
-#          images: ${{ env.REGISTRY_IMAGE }}
       - 
         name: extract docker meta
         id: meta
@@ -85,15 +79,17 @@ jobs:
         name: produce output
         id: produce_output
         run: |
-          echo "${{fromJSON(steps.meta.outputs.tags)}}" >> $GITHUB_OUTPUT
+          echo "we have "${{steps.meta.outputs.tags}}"
+          echo "versions=[${{steps.meta.outputs.tags}}]]" >> $GITHUB_OUTPUT
+          #echo "versions=[${{fromJSON(steps.meta.outputs.tags)}}" >> $GITHUB_OUTPUT
           
   create_manifest:
     runs-on: ubuntu-latest
     needs: 
-        - get-tags
+        - get_versions
     strategy:
         matrix:
-            version: ${{ fromJSON(needs.get_tags.meta.outputs.tags) }}
+            version: ${{ fromJSON(needs.get_versions.outputs.versions) }}
     steps:
       -
         name: Login to Docker Hub
