--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -80,8 +80,8 @@ jobs:
         id: produce_output
         run: |
           echo "we have ${{steps.meta.outputs.tags}}"
-          echo "versions=[${{steps.meta.outputs.tags}}]]" >> $GITHUB_OUTPUT
-          #echo "versions=[${{fromJSON(steps.meta.outputs.tags)}}" >> $GITHUB_OUTPUT
+          echo "versions=[\"latest\", \"1.3\", \"1.4\"]" >> $GITHUB_OUTPUT
+          # echo "versions=[${{steps.meta.outputs.tags}}]]" >> $GITHUB_OUTPUT
           
   create_manifest:
     runs-on: ubuntu-latest
