--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -79,7 +79,7 @@ jobs:
         name: produce output
         id: produce_output
         run: |
-          echo "we have ${{steps.meta.outputs.tags}}"
+          # echo "we have ${{steps.meta.outputs.tags}}"
           echo "versions=[\"latest\", \"1.3\", \"1.4\"]" >> $GITHUB_OUTPUT
           # echo "versions=[${{steps.meta.outputs.tags}}]]" >> $GITHUB_OUTPUT
           
