--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -79,6 +79,7 @@ jobs:
         name: produce output
         id: produce_output
         run: |
+          echo "${{ steps.meta.outputs.tags }}"
           echo "versions=[\"latest\", \"1.3\", \"1.4\"]" >> $GITHUB_OUTPUT
           
   create_manifest:
