--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -79,7 +79,8 @@ jobs:
         name: produce output
         id: produce_output
         run: |
-          echo "versions=[${{ steps.meta.outputs.tags }}]" >> $GITHUB_OUTPUT
+          echo "versions=[${{ steps.meta.outputs.tags }}]"
+          echo "versions=[\"latest\", \"1.3\", \"1.4\"]" >> $GITHUB_OUTPUT
           
   create_manifest:
     runs-on: ubuntu-latest
