--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -81,7 +81,8 @@ jobs:
         run: |
           version_list="${{ steps.meta.outputs.tags }}"
           sanitized_list=$(echo $version_list | sed 's/ /,/g')
-          echo "versions=[$sanitized_list]" >> $GITHUB_OUTPUT
+          echo "versions=[$sanitized_list]"
+          echo "versions=[\"latest\", \"1.3\", \"1.4\"]" >> $GITHUB_OUTPUT
           
   create_manifest:
     runs-on: ubuntu-latest
