--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -82,7 +82,8 @@ jobs:
           version_list="${{ steps.meta.outputs.tags }}"
           sanitized_list=$(echo $version_list | sed 's/ /,/g')
           echo "versions=[$sanitized_list]"
-          echo "versions=[\"latest\", \"1.3\", \"1.4\"]" >> $GITHUB_OUTPUT
+          echo "versions=[latest, 1.3, 1.4]" 
+          echo "versions=[latest, 1.3, 1.4]" >> $GITHUB_OUTPUT
           
   create_manifest:
     runs-on: ubuntu-latest
