--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -49,7 +49,7 @@ jobs:
     needs:
       - build_archs
     outputs:
-      versions: ${{ steps.produce_output.outputs.versions }}    
+      versions: ${{ steps.produce_output.outputs }}    
     steps:
       -
         name: Checkout
@@ -79,11 +79,12 @@ jobs:
         name: produce output
         id: produce_output
         run: |
-          version_list="${{ steps.meta.outputs.tags }}"
-          sanitized_list=$(echo $version_list | sed 's/ /,/g')
-          echo "versions=[$sanitized_list]"
-          echo "versions=[latest, 1.3, 1.4]" 
-          echo "versions=[latest, 1.3, 1.4]" >> $GITHUB_OUTPUT
+          echo ${{fromJSON(steps.meta.outputs.tags)}}  >> $GITHUB_OUTPUT
+          # version_list="${{ steps.meta.outputs.tags }}"
+          # sanitized_list=$(echo $version_list | sed 's/ /,/g')
+          # echo "versions=[$sanitized_list]"
+          # echo "versions=[latest, 1.3, 1.4]" 
+          # echo "versions=[latest, 1.3, 1.4]" >> $GITHUB_OUTPUT
           
   create_manifest:
     runs-on: ubuntu-latest
@@ -91,7 +92,7 @@ jobs:
         - get_versions
     strategy:
         matrix:
-            version: ${{ fromJSON(needs.get_versions.outputs.versions) }}
+            version: ${{ needs.get_versions.outputs }}
     steps:
       -
         name: Login to Docker Hub
