--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -79,7 +79,7 @@ jobs:
         name: produce output
         id: produce_output
         run: |
-          echo "matrix=${{steps.meta.outputs.tags}}"  >> $GITHUB_OUTPUT
+          echo "matrix=${{toJSON(steps.meta.outputs.json).tags}}"  >> $GITHUB_OUTPUT
           # version_list="${{ steps.meta.outputs.tags }}"
           # sanitized_list=$(echo $version_list | sed 's/ /,/g')
           # echo "versions=[$sanitized_list]"
