--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -49,7 +49,7 @@ jobs:
     needs:
       - build_archs
     outputs:
-      versions: ${{ fromJSON(steps.meta.outputs.json.tags) }}    
+      versions: ${{ toJSON(steps.meta.outputs.json.tags) }}    
     steps:
       -
         name: Checkout
@@ -93,7 +93,7 @@ jobs:
         - get_versions
     strategy:
         matrix:
-            version: ${{ needs.get_versions.outputs.versions }}
+            version: ${{ fromJSON(needs.get_versions.outputs.versions) }}
     steps:
       -
         name: Login to Docker Hub
