--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -75,7 +75,6 @@ jobs:
             type=semver,pattern={{major}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}.{{minor}}.{{patch}}
-
 #      - 
 #        name: produce output
 #        id: produce_output
@@ -87,10 +86,20 @@ jobs:
 #          # echo "versions=[latest, 1.3, 1.4]" 
 #          # echo "versions=[latest, 1.3, 1.4]" >> $GITHUB_OUTPUT
 
+  test_output:
+    runs-on: ubuntu-latest
+    needs:
+      - get_versions
+    steps:
+      - 
+        name: something
+        run: |
+          echo "hello ${{ needs.get_versions.outputs.versions }}"
+
   create_manifest:
     runs-on: ubuntu-latest
     needs: 
-        - get_versions
+        - test_output
     strategy:
         matrix:
             version: ${{ needs.get_versions.outputs.versions }}
