--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -49,7 +49,7 @@ jobs:
     needs:
       - build_archs
     outputs:
-      versions: ${{ toJSON(steps.meta.outputs.json.tags) }}    
+      versions: ${{ toJSON(steps.produce_output.outputs.json.tags) }}    
     steps:
       -
         name: Checkout
@@ -75,16 +75,16 @@ jobs:
             type=semver,pattern={{major}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}.{{minor}}.{{patch}}
-#      - 
-#        name: produce output
-#        id: produce_output
-#        run: |
-#          echo "${{ fromJSON(steps.meta.outputs).tags }}" >>  $GITHUB_OUTPUT
-#          # version_list="${{ steps.meta.outputs.tags }}"
-#          # sanitized_list=$(echo $version_list | sed 's/ /,/g')
-#          # echo "versions=[$sanitized_list]"
-#          # echo "versions=[latest, 1.3, 1.4]" 
-#          # echo "versions=[latest, 1.3, 1.4]" >> $GITHUB_OUTPUT
+      - 
+        name: produce output
+        id: produce_output
+        run: |
+          echo "${{ steps.meta.outputs).tags }}" >>  $GITHUB_OUTPUT
+          # version_list="${{ steps.meta.outputs.tags }}"
+          # sanitized_list=$(echo $version_list | sed 's/ /,/g')
+          # echo "versions=[$sanitized_list]"
+          # echo "versions=[latest, 1.3, 1.4]" 
+          # echo "versions=[latest, 1.3, 1.4]" >> $GITHUB_OUTPUT
 
   test_output:
     runs-on: ubuntu-latest
