--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -84,7 +84,15 @@ jobs:
           EOF
           )
           echo "we have $TAGS_JSON"
-          echo "versions=$TAGS_JSON" >>  $GITHUB_OUTPUT
+          # echo "versions=$TAGS_JSON" >>  $GITHUB_OUTPUT
+          #echo "[
+          #  \"docker.io/***/jptest:5.154.0\",
+          #  \"docker.io/***/jptest:5\",
+          #  \"docker.io/***/jptest:5.154\",
+          #  \"docker.io/***/jptest:sha-9467de2ed1fc665bab5a3992a2bc07558c1adc35\",
+          #  \"docker.io/***/jptest:latest\"
+          #]" >> $GITHUB_OUTPUT
+          echo "versions=[\"latest\", \"1.1\", \"1.2\"]" >> $GITHUB_OUTPUT
           # version_list="${{ steps.meta.outputs.tags }}"
           # sanitized_list=$(echo $version_list | sed 's/ /,/g')
           # echo "versions=[$sanitized_list]"
