--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -93,8 +93,7 @@ jobs:
 
   create_manifest:
     runs-on: ubuntu-latest
-    needs: 
-        - test_output
+    needs: [test_output, get_versions]
     strategy:
         matrix:
             version: ${{ fromJSON(needs.get_versions.outputs.versions) }}
