--- a/.github/workflows/build-steps.yml
+++ b/.github/workflows/build-steps.yml
@@ -79,12 +79,13 @@ jobs:
         name: produce output
         id: produce_output
         run: |
-          TAGS_JSON=$(cat <<'EOF'
-            ${{ toJSON(fromJSON(steps.meta.outputs.json).tags) }}
-          EOF
-          )
-          echo "we have $TAGS_JSON"
-          echo "versions=[\"latest\", \"1.1\", \"1.2\"]" >> $GITHUB_OUTPUT
+          TAGS_JSON=${{ toJSON(fromJSON(steps.meta.outputs.json).tags) }}
+          delimiter="$(openssl rand -hex 8)"
+          echo "output-name<<${delimiter}" >> "${GITHUB_OUTPUT}"
+          echo "version=$TAGS_JSON" >> "${GITHUB_OUTPUT}"
+          echo "${delimiter}" >> "${GITHUB_OUTPUT}"
+          echo "we have $TAGS_JSON" 
+          #echo "versions=[\"latest\", \"1.1\", \"1.2\"]" >> $GITHUB_OUTPUT
 
   test_output:
     runs-on: ubuntu-latest
