--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -37,7 +37,7 @@ jobs:
         name: produce output
         id: produce_output
         run: |
-          TAGS_JSON=${{ toJSON(fromJSON(steps.meta.outputs.json).tags) }}
+          TAGS_JSON=${{ fromJSON(steps.meta.outputs.json).tags }}
           echo "we have ${TAGS_JSON}" 
           delimiter="$(openssl rand -hex 8)"
           echo "output-name<<${delimiter}" >> "${GITHUB_OUTPUT}"
